# julia-reader

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
.orbos/: ide_state.json
demo/nextjs-reader/: env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
demo/nextjs-reader/app/: globals.css  layout.tsx  page.tsx
demo/nextjs-reader/app/playground/: page.tsx
demo/nextjs-reader/app/whitepaper/: layout.tsx  page.tsx
demo/nextjs-reader/components/: ChronicleExplorer.tsx  MarkdownBody.tsx  SiteHeader.tsx
demo/nextjs-reader/lib/: chronicle-demo-stages.ts  reader-runner.ts
demo/nextjs-reader/public/chronicle-dune/: _demo-manifest.json
demo/nextjs-reader/scripts/: refresh-bundled-chronicle.sh
docs/: orbos-skills-layer-skill-metadata-fix.md  whitepaper.md
docs/JuliaReaderCLI/: README.md  cli-reference.md  configure-model.md  how-the-terminal-bundle-works.md
scripts/: build-terminal-bundle.sh  configure-model.sh  configure_model.py  setup.sh
src/julia_reader/: __init__.py  book_planner.py  chunker.py  cli.py  error_logger.py  lake_strings.py  live_summary.py  llm.py  output_scaffold.py  page_writer.py  pipeline.py  reader_config.py  sentence_splitter.py  subject_shift.py  text_normalizer.py  theme.py  validator.py
src/julia_reader/prompts/: chapter_plan.md  chunk_summary.md  index_writer.md  live_update.md  page_writer.md  preface_writer.md  subject_shift.md  validator.md
terminal/: README.md  setup.sh
tests/: conftest.py  test_generalized_pipeline.py  test_validation_integration.py
(+65 files in other folders)
