[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "julia-reader"
version = "0.1.0"
description = "Julia Reader — standalone progressive Reader Chronicle harness (terminal, OpenAI-compatible LLM)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Julia Reader contributors" }]
keywords = ["reader", "chronicle", "markdown", "llm", "cli"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/harper-nottinghill/julia-reader"
Repository = "https://github.com/harper-nottinghill/julia-reader"

[project.scripts]
julia-reader = "julia_reader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
